# plugboard

./: CMakeLists.txt  Doxyfile  block.cpp  block.hpp  block_loader.cpp  block_loader.hpp  calc_plain.cpp  colour_debug.hpp  command_parse.hpp  constraint.hpp  environment.cpp  environment.hpp  exceptions.hpp  exec_matrix.cpp  exec_matrix.hpp  exec_stage.cpp  exec_stage.hpp  factory.hpp  hump.kdevelop  hump.kdevelop.filelist  macros.hpp  main.cpp  message.hpp  parameter.cpp  parameter.hpp  plugboard.cpp  plugboard.hpp  plugboard.i  plugboard.kdevelop  plugboard.kdevelop.filelist  plugboard.py  plugboard_py.cpp  port.cpp  port.hpp  port_base.cpp  port_base.hpp  port_in.cpp  port_in.hpp  port_out.cpp  port_out.hpp  (+20 more)
block/: add_get_ports.hpp  block.cpp  block.hpp  block_ptr.cpp  block_ptr.hpp  buffer_access.hpp  create.hpp  dynamic.hpp  port_traits.hpp  sink.cpp  sink.hpp  source.cpp  source.hpp
blocks/: CMakeLists.txt  block_1in.cpp  block_1in1out.cpp  block_1in2out.cpp  block_1out.cpp  block_2in1out.cpp  block_2in2out.cpp  block_AWGNChannel.cpp  block_Add.cpp  block_Arithmetic.cpp  block_BitErrorCount.cpp  block_BlockDeinterleaver.cpp  block_BlockInterleaver.cpp  block_ComposeComplex.cpp  block_ConjugateComplex.cpp  block_ConvolutionalDecoder.cpp  block_ConvolutionalEncoder.cpp  block_FadingChannel.cpp  block_Fork.cpp  block_ITWrite.cpp  block_MPSKDemodulator.cpp  block_MPSKModulator.cpp  block_RaisedCosine.cpp  block_RaisedCosineReceive.cpp  block_RaisedCosineTransmit.cpp  block_RandomUniformBitGenerator.cpp  block_StdoutSink.cpp  block_TurboDecoder.cpp  block_TurboEncoder.cpp  block_dummy2.cpp  block_dummy3.cpp  block_skel.cpp  block_stdoutSink.cpp  block_stdout_sink.cpp
blocks/block_Scrambler/: block_Scrambler.cpp  scramble.hpp
blocks/scrambler/: CMakeLists.txt  block_UMTSDownlinkScrambler.cpp  block_UMTSLongUplinkScrambler.cpp  block_UMTSShortUplinkScrambler.cpp  scramble.cpp  scramble.hpp
cmake/modules/: FindReadline.cmake
exception/: base.hpp  block.hpp  exceptions.cpp  input.hpp  port.hpp  signal.hpp
grammar/: result_closure.hpp
grammar/arithmetic/: expression.hpp  factor.hpp  term.hpp
grammar/arithmetic/definition/: expression.hpp  factor.hpp  term.hpp
grammar/command/: actions.cpp  actions.hpp  command_parse.hpp  identifier.hpp  new_parse.hpp  parameter_list.hpp  parser_id.hpp  policies.hpp  variable_name.hpp
grammar/literal/: float.hpp  imaginary.hpp  integer.hpp
grammar/variable/: actions.cpp  actions.hpp  variable_parser.hpp
input/: actions.cpp  actions.hpp  command_parse.hpp  console.cpp  console.hpp  file.cpp  file.hpp
pimpl/: pimpl.h
pimpl/detail/: pimpl.h
port/: port.hpp  port_base.hpp  port_in.cpp  port_in.hpp  port_out.cpp  port_out.hpp
signal/: signal.hpp  signal_ptr.cpp  signal_ptr.hpp
swift/: SReadline.h
types/: base.hpp  typeinfo.hpp  vectors.hpp
variable/: variable.cpp  variable.hpp  variable_iterator.hpp
